--- a/proxy/web/templates/base.html
+++ b/proxy/web/templates/base.html
@@ -27,8 +27,8 @@
             </div>
             <div id="navbar" class="navbar-collapse collapse">
               <ul class="nav navbar-nav">
-                <li class="active"><a href="/">Home</a></li>
-                <li><a href="#about">About</a></li>
+                <li class="active"><a href="/">Proxy</a></li>
+                <li><a href="upload_file">PicBed</a></li>
                 <li><a href="#contact">Contact</a></li>
                 <li class="dropdown">
                   <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <span class="caret"></span></a>
